tests/snapshots/formats__aff__usb.aff.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ usb.aff — AFF image, 5 segments, 1 pages, 16.0 KiB image  [0x0+0x123]
    Signature: "AFF10"  [0x0+0x8]
  ▾ pagesize: 16384  [0x8+0x20] → 0x20+0x0
      Magic: "AFF"  [0x8+0x4]
      Name length: 8  [0xc+0x4]
      Data length: 0  [0x10+0x4]
      Argument: 16384  [0x14+0x4]
      Name: "pagesize"  [0x18+0x8]
      Data  [0x20+0x0]
      Trailer: "ATT"  [0x20+0x4]
      Segment length: 32  [0x24+0x4]
  ▾ imagesize: 16384 — 16.0 KiB  [0x28+0x29] → 0x41+0x8
      Magic: "AFF"  [0x28+0x4]
      Name length: 9  [0x2c+0x4]
      Data length: 8  [0x30+0x4]
      Argument: 2  [0x34+0x4]
      Name: "imagesize"  [0x38+0x9]
      Data  [0x41+0x8]
      Trailer: "ATT"  [0x49+0x4]
      Segment length: 41  [0x4d+0x4]
  ▾ acquisition_commandline: "aimage /dev/sdb usb.aff"  [0x51+0x46] → 0x78+0x17
      Magic: "AFF"  [0x51+0x4]
      Name length: 23  [0x55+0x4]
      Data length: 23  [0x59+0x4]
      Argument: 0  [0x5d+0x4]
      Name: "acquisition_commandline"  [0x61+0x17]
      Data  [0x78+0x17]
      Trailer: "ATT"  [0x8f+0x4]
      Segment length: 70  [0x93+0x4]
  ▾ page0 — page 0, 68 bytes stored  [0x97+0x61] → 0xac+0x44
      Magic: "AFF"  [0x97+0x4]
      Name length: 5  [0x9b+0x4]
      Data length: 68  [0x9f+0x4]
      Flags: 0x3 [COMPRESSED | COMPRESSED_MAX]  [0xa3+0x4]
      Name: "page0"  [0xa7+0x5]
    ▾ Data (zlib) — MBR partition table, 1 primary partition, 16.0 KiB  [0xac+0x44]
        Bootstrap code — empty  [#1:0x0+0x1b8]
        Disk signature: 0x0  [#1:0x1b8+0x4]
        Copy protection: 0x0 — not protected  [#1:0x1bc+0x2]
      ▾ Partition 1 — FAT32 (LBA) (0x0c), 14.6 MiB at LBA 2048, active  [#1:0x1be+0x10]
        ▾ Entry  [#1:0x1be+0x10]
            Boot indicator: active (bootable) (0x80)  [#1:0x1be+0x1]
            First sector (CHS): 00 02 00  |...| — C/H/S 0/0/2  [#1:0x1bf+0x3]
            Partition type: FAT32 (LBA) (0xc)  [#1:0x1c2+0x1]
            Last sector (CHS): fe ff ff  |...| — C/H/S 1023/254/63  [#1:0x1c3+0x3]
            First sector (LBA): 2048  [#1:0x1c6+0x4]
            Sectors: 30000 — 14.6 MiB  [#1:0x1ca+0x4]
          Volume  [#1:0x4000+0x0]
            ! note: empty
            ! truncated: needed 0xea6000 bytes at 0x100000, only 0x0 available [#1:0x100000+0xea6000]
        Partition 2: unused (0x0) — all zeros  [#1:0x1ce+0x10]
        Partition 3: unused (0x0) — all zeros  [#1:0x1de+0x10]
        Partition 4: unused (0x0) — all zeros  [#1:0x1ee+0x10]
        Boot signature: 0xaa55  [#1:0x1fe+0x2]
      ▾ Disk layout — partitions and the space between them  [#1:0x0+0x4000]
          Master boot record — LBA 0, 512 bytes  [#1:0x0+0x200]
          Unpartitioned space — LBA 1–31: 15.5 KiB, unallocated, all zeros  [#1:0x200+0x3e00]
          Partition 1: FAT32 (LBA) — LBA 2048–32047, 14.6 MiB; beyond the end of the image  [#1:0x4000+0x0]
      Trailer: "ATT"  [0xf0+0x4]
      Segment length: 97  [0xf4+0x4]
  ▾ md5 — 16 bytes  [0xf8+0x2b] → 0x10b+0x10
      Magic: "AFF"  [0xf8+0x4]
      Name length: 3  [0xfc+0x4]
      Data length: 16  [0x100+0x4]
      Argument: 0  [0x104+0x4]
      Name: "md5"  [0x108+0x3]
      Data  [0x10b+0x10]
      Trailer: "ATT"  [0x11b+0x4]
      Segment length: 43  [0x11f+0x4]
